--- a/index.html
+++ b/index.html
@@ -4,120 +4,172 @@
     <title>tom carrio</title>
     <link rel="stylesheet" href="assets/css/index.css">
     <script src="assets/js/index.js"></script>
+    <script src="https://unpkg.com/feather-icons"></script>
 </head>
 
 <body>
     <section id="header">
-        <div id="user-icon"></div>
-        <div id="hello">
-            <span>I am Tom Carrio</span>
-            <span>an aspiring software engineer</span>
-            <br/>
-            <span>a passion for</span>
-            <span id="interests"></span>
+        <div>
+            <div id="user-icon">
+                <img src="assets/images/avatar.jpg">
+            </div>
+            <div id="hello">
+                <span class="me">I am Tom Carrio,</span>
+                <span>a software engineer&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                <br />
+                <span>with a passion for</span>
+                <span id="interests">Open Source &lt;3</span>
+            </div>
+            <div id="contact-links">
+                <a href="https://git.sr.ht/~tcarrio"><i data-feather="circle"></i></a>
+                <a href="https://github.com/tcarrio"><i data-feather="github"></i></a>
+                <a href="https://gitlab.com/tcarrio"><i data-feather="gitlab"></i></a>
+                <a href="mailto:tom@carrio.dev"><i data-feather="mail"></i></a>
+            </div>
         </div>
-        <div id="contact-links"></div>
     </section>
     <div id="content">
         <section id="introduction">
             <p>Developing impacting software is a professional and personal interest of mine. This started before I
-                picked a
-                major in college; I ventured into open source development and the world of Linux for years prior to
-                deciding
-                on college as my path to success. I have committed time to helping Linux communities, developing
-                software
-                for myself and contributing to open source projects in the means of documentation and programming. A few
-                of
-                the projects I have worked on include Gogs, Gitea, Zulip, Pass, and Lutris.</p>
+                picked a major in college; I ventured into open source development and the world of Linux for years
+                prior to deciding on college as my path to success. I have committed time to helping Linux communities,
+                developing software for myself and contributing to open source projects in the means of documentation
+                and programming. A few of the projects I have worked on include Gogs, Gitea, Zulip, Pass, and Lutris.
+            </p>
             <p>My interests span all over the world of computer technologies. I'm fundamentally inspired by movements in
                 cloud engineering and containers. I have a history of system and database administration, working with
                 hypervisors and physical servers, and more recently focusing on container orchestration with Docker
-                Compose
-                and cluster-based solutions such as Kubernetes and OpenShift. I love innovative ideas and approaches;
-                Taking
-                what we have learned from past solutions and creating a brand new foundation for elastic, efficient
-                systems.
-                I love finding hard problems and particularly enjoy incorporating new and innovative technologies to
-                accomplish tasks.</p>
+                Compose and cluster-based solutions such as Kubernetes and OpenShift. I love innovative ideas and
+                approaches; Taking what we have learned from past solutions and creating a brand new foundation for
+                elastic, efficient systems. I love finding hard problems and particularly enjoy incorporating new and
+                innovative technologies to accomplish tasks.</p>
             <p>My previous work experience spans from service-oriented architectures web applications, to ETL
-                development
-                for batch services, to monolithic Java web servers. I have always tackled new technologies wherever
-                possible, utilizing new programming languages, databases, or paradigms. As a backend-oriented developer
-                with
-                familiarity across the full stack, I have implemented RESTful services, real-time communication using
-                WebSockets, modern Angular web applications, and relational and object-oriented database systems.</p>
+                development for batch services, to monolithic Java web servers. I have always tackled new technologies
+                wherever possible, utilizing new programming languages, databases, or paradigms. As a backend-oriented
+                developer with familiarity across the full stack, I have implemented RESTful services, real-time
+                communication using WebSockets, modern Angular web applications, and relational and object-oriented
+                database systems.</p>
             <p>I am familiar with several versions of source control management such as SVN and Git, many programming
                 languages across the space of scripting (Bash, Python), systems engineering (Python, Go), mobile
                 applications (Android), web applications (Python, Go, Java, PHP), and database interaction (SQL, Mongo).
                 Whether I have worked with a technology in the past or have no experience at all, my aim is to solve
                 problems and enhance lifestyles. I am currently a software engineer for Ally, a digital financial
-                services
-                company, and help deliver services that enable better experiences for the every day person.</p>
+                services company, and help deliver services that enable better experiences for the every day person.</p>
         </section>
         <section id="contributions">
-            <p>
+            <div class="mono">/** projects and contributions */</div>
+            <div>
                 <a href="https://github.com/hashicorp/packer">
-                    <span class="org">hashicorp/</span><span class="project">packer</span><span class="desc">Packer is a tool for creating identical machine images for multiple platforms from a single source configuration</span><span class="stars" data-github-project="hashicorp/packer"></span><span class="lang go">Go</span>
+                    <div class="org">hashicorp/</div>
+                    <div class="project">packer</div>
+                    <div class="stars" data-github-project="hashicorp/packer"></div>
+                    <div class="lang go">Go</div>
+                    <div class="desc">Packer is a tool for creating identical machine images for multiple platforms from a single source configuration</div>
                 </a>
-            </p>
-            <p>
-                <a href="https://github.com/gogs/gogs">
-                    <span class="org">gogs/</span><span class="project">gogs</span><span class="desc">Gogs is a painless self-hosted Git service</span><span class="stars" data-github-project="gogs/gogs"></span><span class="lang go">Go</span>
-                </a>
-            </p>
-            <p>
-                <a href="https://github.com/github/hub">
-                    <span class="org">github/</span><span class="project">hub</span><span class="desc">A command-line tool that makes git easier to use with GitHub</span><span class="stars" data-github-project="github/hub"></span><span class="lang go">Go</span>
-                </a>
-            </p>
-            <p>
-                <a href="https://github.com/go-gitea/gitea">
-                    <span class="org">go-gitea/</span><span class="project">gitea</span><span class="desc">Git with a cup of tea, painless self-hosted git service</span><span class="stars" data-github-project="go-gitea/gitea"></span><span class="lang go">Go</span>
-                </a>
-            </p>
-            <p>
+            </div>
+            <div>
                 <a href="https://github.com/Dynatrace/serverless-oneagent">
-                    <span class="org">dynatrace/</span><span class="project">serverless-oneagent</span><span class="desc">Serverless Framework plugin to include Dynatrace OneAgent in serverless deployments</span><span class="stars" data-github-project="Dynatrace/serverless-oneagent"></span><span class="lang ts">TypeScript</span>
+                    <div class="org">dynatrace/</div>
+                    <div class="project">serverless-oneagent</div>
+                    <div class="stars" data-github-project="Dynatrace/serverless-oneagent"></div>
+                    <div class="lang ts">TypeScript</div>
+                    <div class="desc">Serverless Framework plugin to include Dynatrace OneAgent in serverless deployments</div>
                 </a>
-            </p>
-            <p>
-                <a href="https://www.npmjs.com/package/@dynatrace/api-client">
-                    <span class="org">@dynatrace/</span><span class="project">api-client</span><span class="desc">Module for interacting with the Dynatrace API including caching support</span><span class="stars" data-npm-project="@dynatrace/api-client"></span><span class="lang ts">TypeScript</span>
+            </div>
+            <div>
+                <a href="https://github.com/gogs/gogs">
+                    <div class="org">gogs/</div>
+                    <div class="project">gogs</div>
+                    <div class="stars" data-github-project="gogs/gogs"></div>
+                    <div class="lang go">Go</div>
+                    <div class="desc">Gogs is a painless self-hosted Git service</div>
                 </a>
-            </p>
-            <p>
-                <a href="https://github.com/DefinitelyTyped/DefinitelyTyped">
-                    <span class="org">DefinitelyTyped/</span><span class="project">DefinitelyTyped</span><span class="desc">The repository for high quality TypeScript type definitions</span><span class="stars" data-github-project="DefinitelyTyped/DefinitelyTyped"></span><span class="lang ts">TypeScript</span>
-                </a>
-            </p>
-            <p>
-                <a href="https://github.com/lutris/lutris">
-                    <span class="org">lutris/</span><span class="project">lutris</span><span class="desc">Open Source gaming platform for GNU/Linux</span><span class="stars" data-github-project="lutris/lutris"></span><span class="lang py">Python</span>
-                </a>
-            </p>
-            <p>
-                <a href="https://github.com/roddhjav/pass-import">
-                    <span class="org">roddhjav/</span><span class="project">pass-import</span><span class="desc">A pass extension for importing data from most of the existing password manager</span><span class="stars" data-github-project="roddhjav/pass-import"></span><span class="lang py">Python</span>
-                </a>
-            </p>
-            <p>
-                <a href="https://hub.docker.com/r/tcarrio/dynamodb-local-debugging">
-                    <span class="org">tcarrio/</span><span class="project">dynamodb-local-debugging</span><span class="desc">DynamoDB Local container ready for development with debug logging</span><span class="stars" data-docker-project="tcarrio/dynamodb-local-debugging"></span><span class="lang dk">Docker</span>
-                </a>
-            </p>
-            <p>
-                <a href="https://github.com/tcarrio/dddd">
-                    <span class="org">tcarrio/</span><span class="project">dddd</span><span class="desc">Dynamic DNS for Cloudflare using DuckDuckGo's Answers API</span><span class="stars" data-github-project="tcarrio/dddd"></span><span class="lang go">Go</span>
-                </a>
-            </p>
-            <p>
+            </div>
+            <div>
                 <a href="https://git.sr.ht/~tcarrio/dialogflow-as-code">
-                    <span class="org">~tcarrio/</span><span class="project">dialogflow-as-code</span><span class="desc">Declarative management of Dialogflow resources in Google Cloud</span><span class="stars" data-srht-project="~tcarrio/dialogflow-as-code"></span><span class="lang ts">TypeScript</span>
+                    <div class="org">~tcarrio/</div>
+                    <div class="project">dialogflow-as-code</div>
+                    <div class="stars" data-srht-project="~tcarrio/dialogflow-as-code"></div>
+                    <div class="lang ts">TypeScript</div>
+                    <div class="desc">Declarative management of Dialogflow resources in Google Cloud</div>
                 </a>
-            </p>
-            
+            </div>
+            <div>
+                <a href="https://github.com/github/hub">
+                    <div class="org">github/</div>
+                    <div class="project">hub</div>
+                    <div class="stars" data-github-project="github/hub"></div>
+                    <div class="lang go">Go</div>
+                    <div class="desc">A command-line tool that makes git easier to use with GitHub</div>
+                </a>
+            </div>
+            <div>
+                <a href="https://www.npmjs.com/package/@dynatrace/api-client">
+                    <div class="org">@dynatrace/</div>
+                    <div class="project">api-client</div>
+                    <div class="stars" data-npm-project="@dynatrace/api-client"></div>
+                    <div class="lang ts">TypeScript</div>
+                    <div class="desc">Module for interacting with the Dynatrace API including caching support</div>
+                </a>
+            </div>
+            <div>
+                <a href="https://github.com/go-gitea/gitea">
+                    <div class="org">go-gitea/</div>
+                    <div class="project">gitea</div>
+                    <div class="stars" data-github-project="go-gitea/gitea"></div>
+                    <div class="lang go">Go</div>
+                    <div class="desc">Git with a cup of tea, painless self-hosted git service</div>
+                </a>
+            </div>
+            <div>
+                <a href="https://github.com/DefinitelyTyped/DefinitelyTyped">
+                    <div class="org">DefinitelyTyped/</div>
+                    <div class="project">DefinitelyTyped</div>
+                    <div class="stars" data-github-project="DefinitelyTyped/DefinitelyTyped"></div>
+                    <div class="lang ts">TypeScript</div>
+                    <div class="desc">The repository for high quality TypeScript type definitions</div>
+                </a>
+            </div>
+            <div>
+                <a href="https://github.com/lutris/lutris">
+                    <div class="org">lutris/</div>
+                    <div class="project">lutris</div>
+                    <div class="stars" data-github-project="lutris/lutris"></div>
+                    <div class="lang py">Python</div>
+                    <div class="desc">Open Source gaming platform for GNU/Linux</div>
+                </a>
+            </div>
+            <div>
+                <a href="https://hub.docker.com/r/tcarrio/dynamodb-local-debugging">
+                    <div class="org">tcarrio/</div>
+                    <div class="project">dynamodb-local-debugging</div>
+                    <div class="stars" data-docker-project="tcarrio/dynamodb-local-debugging"></div>
+                    <div class="lang dk">Docker</div>
+                    <div class="desc">DynamoDB Local container ready for development with debug logging</div>
+                </a>
+            </div>
+            <div>
+                <a href="https://github.com/roddhjav/pass-import">
+                    <div class="org">roddhjav/</div>
+                    <div class="project">pass-import</div>
+                    <div class="stars" data-github-project="roddhjav/pass-import"></div>
+                    <div class="lang py">Python</div>
+                    <div class="desc">A pass extension for importing data from most of the existing password manager</div>
+                </a>
+            </div>
+            <div>
+                <a href="https://github.com/tcarrio/dddd">
+                    <div class="org">tcarrio/</div>
+                    <div class="project">dddd</div>
+                    <div class="stars" data-github-project="tcarrio/dddd"></div>
+                    <div class="lang go">Go</div>
+                    <div class="desc">Dynamic DNS for Cloudflare using DuckDuckGo's Answers API</div>
+                </a>
+            </div>
+
         </section>
         <section id="technologies">
+            <div class="title">Technologies and Experience</div>
             <div>
                 <p class="topic">Container and Infrastructural Technologies </p>
                 <p class="entries">OpenShift, Docker, ECS, Compose, Kubernetes, Etcd, Terraform, Packer</p>
@@ -140,10 +192,14 @@
                 </p>
             </div>
         </section>
-        <section id="experience">
-
-        </section>
+        
+        <!-- <section id="experience"></section> -->
     </div>
+
+    <!-- Replace all icons -->
+    <script>
+        feather.replace()
+    </script>
 </body>
 
 </html>
