Updated styling around mobile devices, added LinkedIn link

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <a href="https://git.sr.ht/~tcarrio"><i data-feather="circle"></i></a>
                 <a href="https://github.com/tcarrio"><i data-feather="github"></i></a>
                 <a href="https://gitlab.com/tcarrio"><i data-feather="gitlab"></i></a>
+                <a href="https://www.linkedin.com/in/tomcarrio/"><i data-feather="linkedin"></i></a>
                 <a href="mailto:tom@carrio.dev"><i data-feather="mail"></i></a>
             </div>
         </div>
@@ -64,6 +65,7 @@
                     <div class="project">packer</div>
                     <div class="stars" data-github-project="hashicorp/packer"></div>
                     <div class="lang go">Go</div>
+                    <div class="expand"><i data-feather="arrow-down-right"></i></div>
                     <div class="desc">Packer is a tool for creating identical machine images for multiple platforms from a single source configuration</div>
                 </a>
             </div>
@@ -73,6 +75,7 @@
                     <div class="project">serverless-oneagent</div>
                     <div class="stars" data-github-project="Dynatrace/serverless-oneagent"></div>
                     <div class="lang ts">TypeScript</div>
+                    <div class="expand"><i data-feather="arrow-down-right"></i></div>
                     <div class="desc">Serverless Framework plugin to include Dynatrace OneAgent in serverless deployments</div>
                 </a>
             </div>
@@ -82,6 +85,7 @@
                     <div class="project">gogs</div>
                     <div class="stars" data-github-project="gogs/gogs"></div>
                     <div class="lang go">Go</div>
+                    <div class="expand"><i data-feather="arrow-down-right"></i></div>
                     <div class="desc">Gogs is a painless self-hosted Git service</div>
                 </a>
             </div>
@@ -91,6 +95,7 @@
                     <div class="project">dialogflow-as-code</div>
                     <div class="stars" data-srht-project="~tcarrio/dialogflow-as-code"></div>
                     <div class="lang ts">TypeScript</div>
+                    <div class="expand"><i data-feather="arrow-down-right"></i></div>
                     <div class="desc">Declarative management of Dialogflow resources in Google Cloud</div>
                 </a>
             </div>
@@ -100,6 +105,7 @@
                     <div class="project">hub</div>
                     <div class="stars" data-github-project="github/hub"></div>
                     <div class="lang go">Go</div>
+                    <div class="expand"><i data-feather="arrow-down-right"></i></div>
                     <div class="desc">A command-line tool that makes git easier to use with GitHub</div>
                 </a>
             </div>
@@ -109,6 +115,7 @@
                     <div class="project">api-client</div>
                     <div class="stars" data-npm-project="@dynatrace/api-client"></div>
                     <div class="lang ts">TypeScript</div>
+                    <div class="expand"><i data-feather="arrow-down-right"></i></div>
                     <div class="desc">Module for interacting with the Dynatrace API including caching support</div>
                 </a>
             </div>
@@ -118,6 +125,7 @@
                     <div class="project">gitea</div>
                     <div class="stars" data-github-project="go-gitea/gitea"></div>
                     <div class="lang go">Go</div>
+                    <div class="expand"><i data-feather="arrow-down-right"></i></div>
                     <div class="desc">Git with a cup of tea, painless self-hosted git service</div>
                 </a>
             </div>
@@ -127,6 +135,7 @@
                     <div class="project">DefinitelyTyped</div>
                     <div class="stars" data-github-project="DefinitelyTyped/DefinitelyTyped"></div>
                     <div class="lang ts">TypeScript</div>
+                    <div class="expand"><i data-feather="arrow-down-right"></i></div>
                     <div class="desc">The repository for high quality TypeScript type definitions</div>
                 </a>
             </div>
@@ -136,6 +145,7 @@
                     <div class="project">lutris</div>
                     <div class="stars" data-github-project="lutris/lutris"></div>
                     <div class="lang py">Python</div>
+                    <div class="expand"><i data-feather="arrow-down-right"></i></div>
                     <div class="desc">Open Source gaming platform for GNU/Linux</div>
                 </a>
             </div>
@@ -145,6 +155,7 @@
                     <div class="project">dynamodb-local-debugging</div>
                     <div class="stars" data-docker-project="tcarrio/dynamodb-local-debugging"></div>
                     <div class="lang dk">Docker</div>
+                    <div class="expand"><i data-feather="arrow-down-right"></i></div>
                     <div class="desc">DynamoDB Local container ready for development with debug logging</div>
                 </a>
             </div>
@@ -154,6 +165,7 @@
                     <div class="project">pass-import</div>
                     <div class="stars" data-github-project="roddhjav/pass-import"></div>
                     <div class="lang py">Python</div>
+                    <div class="expand"><i data-feather="arrow-down-right"></i></div>
                     <div class="desc">A pass extension for importing data from most of the existing password manager</div>
                 </a>
             </div>
@@ -163,6 +175,7 @@
                     <div class="project">dddd</div>
                     <div class="stars" data-github-project="tcarrio/dddd"></div>
                     <div class="lang go">Go</div>
+                    <div class="expand"><i data-feather="arrow-down-right"></i></div>
                     <div class="desc">Dynamic DNS for Cloudflare using DuckDuckGo's Answers API</div>
                 </a>
             </div>
