Updated with JS hovered class for mobile clients to click for similar dropdown functionality on the description

--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
                     <div class="project">packer</div>
                     <div class="stars" data-github-project="hashicorp/packer"></div>
                     <div class="lang go">Go</div>
-                    <div class="expand"><i data-feather="arrow-down-right"></i></div>
-                    <div class="desc">Packer is a tool for creating identical machine images for multiple platforms from a single source configuration</div>
+                    <div class="expand"><i data-feather="more-horizontal"></i></div>
+                    <div class="desc">Packer is a tool for creating identical machine images for multiple platforms from
+                        a single source configuration</div>
                 </a>
             </div>
             <div>
@@ -75,8 +76,9 @@
                     <div class="project">serverless-oneagent</div>
                     <div class="stars" data-github-project="Dynatrace/serverless-oneagent"></div>
                     <div class="lang ts">TypeScript</div>
-                    <div class="expand"><i data-feather="arrow-down-right"></i></div>
-                    <div class="desc">Serverless Framework plugin to include Dynatrace OneAgent in serverless deployments</div>
+                    <div class="expand"><i data-feather="more-horizontal"></i></div>
+                    <div class="desc">Serverless Framework plugin to include Dynatrace OneAgent in serverless
+                        deployments</div>
                 </a>
             </div>
             <div>
@@ -85,7 +87,7 @@
                     <div class="project">gogs</div>
                     <div class="stars" data-github-project="gogs/gogs"></div>
                     <div class="lang go">Go</div>
-                    <div class="expand"><i data-feather="arrow-down-right"></i></div>
+                    <div class="expand"><i data-feather="more-horizontal"></i></div>
                     <div class="desc">Gogs is a painless self-hosted Git service</div>
                 </a>
             </div>
@@ -95,7 +97,7 @@
                     <div class="project">dialogflow-as-code</div>
                     <div class="stars" data-srht-project="~tcarrio/dialogflow-as-code"></div>
                     <div class="lang ts">TypeScript</div>
-                    <div class="expand"><i data-feather="arrow-down-right"></i></div>
+                    <div class="expand"><i data-feather="more-horizontal"></i></div>
                     <div class="desc">Declarative management of Dialogflow resources in Google Cloud</div>
                 </a>
             </div>
@@ -105,7 +107,7 @@
                     <div class="project">hub</div>
                     <div class="stars" data-github-project="github/hub"></div>
                     <div class="lang go">Go</div>
-                    <div class="expand"><i data-feather="arrow-down-right"></i></div>
+                    <div class="expand"><i data-feather="more-horizontal"></i></div>
                     <div class="desc">A command-line tool that makes git easier to use with GitHub</div>
                 </a>
             </div>
@@ -115,7 +117,7 @@
                     <div class="project">api-client</div>
                     <div class="stars" data-npm-project="@dynatrace/api-client"></div>
                     <div class="lang ts">TypeScript</div>
-                    <div class="expand"><i data-feather="arrow-down-right"></i></div>
+                    <div class="expand"><i data-feather="more-horizontal"></i></div>
                     <div class="desc">Module for interacting with the Dynatrace API including caching support</div>
                 </a>
             </div>
@@ -125,7 +127,7 @@
                     <div class="project">gitea</div>
                     <div class="stars" data-github-project="go-gitea/gitea"></div>
                     <div class="lang go">Go</div>
-                    <div class="expand"><i data-feather="arrow-down-right"></i></div>
+                    <div class="expand"><i data-feather="more-horizontal"></i></div>
                     <div class="desc">Git with a cup of tea, painless self-hosted git service</div>
                 </a>
             </div>
@@ -135,7 +137,7 @@
                     <div class="project">DefinitelyTyped</div>
                     <div class="stars" data-github-project="DefinitelyTyped/DefinitelyTyped"></div>
                     <div class="lang ts">TypeScript</div>
-                    <div class="expand"><i data-feather="arrow-down-right"></i></div>
+                    <div class="expand"><i data-feather="more-horizontal"></i></div>
                     <div class="desc">The repository for high quality TypeScript type definitions</div>
                 </a>
             </div>
@@ -145,7 +147,7 @@
                     <div class="project">lutris</div>
                     <div class="stars" data-github-project="lutris/lutris"></div>
                     <div class="lang py">Python</div>
-                    <div class="expand"><i data-feather="arrow-down-right"></i></div>
+                    <div class="expand"><i data-feather="more-horizontal"></i></div>
                     <div class="desc">Open Source gaming platform for GNU/Linux</div>
                 </a>
             </div>
@@ -155,7 +157,7 @@
                     <div class="project">dynamodb-local-debugging</div>
                     <div class="stars" data-docker-project="tcarrio/dynamodb-local-debugging"></div>
                     <div class="lang dk">Docker</div>
-                    <div class="expand"><i data-feather="arrow-down-right"></i></div>
+                    <div class="expand"><i data-feather="more-horizontal"></i></div>
                     <div class="desc">DynamoDB Local container ready for development with debug logging</div>
                 </a>
             </div>
@@ -165,8 +167,9 @@
                     <div class="project">pass-import</div>
                     <div class="stars" data-github-project="roddhjav/pass-import"></div>
                     <div class="lang py">Python</div>
-                    <div class="expand"><i data-feather="arrow-down-right"></i></div>
-                    <div class="desc">A pass extension for importing data from most of the existing password manager</div>
+                    <div class="expand"><i data-feather="more-horizontal"></i></div>
+                    <div class="desc">A pass extension for importing data from most of the existing password manager
+                    </div>
                 </a>
             </div>
             <div>
@@ -175,7 +178,7 @@
                     <div class="project">dddd</div>
                     <div class="stars" data-github-project="tcarrio/dddd"></div>
                     <div class="lang go">Go</div>
-                    <div class="expand"><i data-feather="arrow-down-right"></i></div>
+                    <div class="expand"><i data-feather="more-horizontal"></i></div>
                     <div class="desc">Dynamic DNS for Cloudflare using DuckDuckGo's Answers API</div>
                 </a>
             </div>
@@ -205,13 +208,35 @@
                 </p>
             </div>
         </section>
-        
+
         <!-- <section id="experience"></section> -->
     </div>
 
     <!-- Replace all icons -->
     <script>
         feather.replace()
+
+        // For mobile clients, provide expansion functionality for project descriptions
+        const hoverClass = "hovered";
+        const bodyEl = document.querySelector("body");
+        document.querySelectorAll("section#contributions>div>a").forEach((pl) => {
+            const expandEl = pl.querySelector(".expand");
+            const descEl = pl.querySelector(".desc");
+            
+            expandEl.addEventListener("click", (el) => {
+                el.stopPropagation();
+                el.preventDefault();
+
+                if (descEl.classList.contains(hoverClass)) {
+                    descEl.classList.remove(hoverClass);    
+                } else {
+                    descEl.classList.add(hoverClass);
+                }
+            });
+            bodyEl.addEventListener("click", () => {
+                descEl.classList.remove(hoverClass);
+            })
+        });
     </script>
 </body>
 
