Updated information about myself and styles in page

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     </header>
     <div id="content">
         <section id="introduction">
+            <code>::Hello, World::</code>
             <p>Architecting, designing, and implementing software systems is a strong professional and personal interest
                 of mine. Whether I'm working on cloud, containers, systems; I love to dive into the technical deep-end
                 of various areas of the tech space.</p>
@@ -40,13 +41,13 @@
                 orchestration, to mobile apps, to automated infrastructure management. My focus lately has been on
                 end-to-end holistic solutions engineering, and embracing every facet of the tech stack.</p>
 
+            <code>::System and Database Administration::</code>
             <p>Through my experience as a system and database administrator, I found an area I truly loved. From 2013 I
                 worked with database systems including Oracle DB and MySQL, and maintained virtual machines across
                 multiple server racks with VMWare ESXi to provision Windows Server and RHEL machines. There were various
                 areas of my role that I found could prove more effectively managed by developing automated maintenance
                 strategies; I touched down on automated backups and log monitoring for internal services as my first
                 step towards development. This is where my interests in software engineering really grew.</p>
-
             <p>While I maintained my position as a system adminstrator and database administrator, I sought out and
                 implemented automation tooling around common tasks to reduce toil. I worked on internal services that
                 would allow for easier work on the intranet, be it servers, hardware devices, and more. These include,
@@ -54,12 +55,14 @@
                 clients in Javascript. The road unfolded and I enrolled in Computer Science at Oakland University to
                 continue my journey.</p>
 
+            <code>::Open Source::</code>
             <p>I have long been a lover of the open source mantra and free software technologies such as Linux, GNU, and
                 Git. Prior to my work as a system and database administrator, I dug into Linux for my personal devices.
                 Experimenting with various tools and technologies is a long-time hobby of mine, and I tried different
                 server operating systems such as CentOS, Debian, and Ubuntu. I started off with Linux on my old shabby
                 laptop with Fedora, and tried out a number of distributions over the years. By the way, I run Arch.</p>
 
+            <code>::Computer Science::</code>
             <p>Through-out my schooling I have studied computer theory, software engineering, networking, operating
                 systems, programming languages, and more. The curriculum alone was never really enough, and I spent time
                 outside of school learning about various technologies like message queues, distributed systems, and
@@ -71,6 +74,7 @@
                 DevOps pipeline solutions implemented with distributed containerized systems. I provided a similar
                 solution at my work to deliver a more up-to-date service for our development team.</p>
 
+            <code>::Software Engineering::</code>
             <p>Eventually I moved into a software engineering role, and joined Ally Financial in 2017. During my time
                 there I worked on several projects. My first work was a project undergoing a migration from mainframe,
                 where we envisioned a complete re-architecture of our central mainframe program into a massive series of
@@ -89,6 +93,7 @@
                 for our Docker containers, developed Helm templates for our OpenShift deployments, and architecting our
                 performance-first lazily-loaded Angular front-end.</p>
 
+            <code>::Full Stack::</code>
             <p>I eventually left Ally in 2019 to join Dynatrace, a company at the forefront of distributed tracing and
                 application performance monitoring. Today, their solution provides users actionable insights into their
                 production environments across mainframes, back-end, front-end, mobile apps, websites... My initial role
@@ -110,10 +115,14 @@
                     delivery pipeline</li>
             </ul>
 
-            <p>I have also worked on several areas as a part of the team. I love to dive deep in whatever area I work
-                in, whether I am designing Docker containers or writing web applications, but I always provide feedback
-                and help whenever my peers are in need.</p>
+            <code>::Teamwork::</code>
+            <p>I love to dive deep in whatever area I work in, whether I am designing Docker containers or writing web
+                applications, but I always provide feedback and help whenever my peers are in need. I also serve as my
+                teams Scrum Master to faciliate meetings, resolve task estimates, and ensure the team grows together
+                while working to enhancing our sprint velocity and stability.
+            </p>
 
+            <code>::So, Me::</code>
             <p>I am extremely passionate in engineering solutions around complex problems, automating redundant
                 operations, writing code, bringing users great experiences, reducing toil, and implementing practices
                 that keeps my phone from buzzing in the late hours of the night.</p>
