Updated interests, technologies, and footer with info on build / source / host

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <div id="hello">
                 <span class="me">I am Tom Carrio,</span>
-                <span>a software engineer&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                <span>a software engineer&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                 <br />
                 <span>with a passion for</span>
                 <span id="interests">Open Source &lt;3</span>
@@ -131,10 +131,10 @@
             <div class="mono">/** projects and contributions */</div>
             <div>
                 <a href="https://github.com/hashicorp/packer">
-                    <div class="org">hashicorp/</div>
-                    <div class="project">packer</div>
+                    <div class="org"><p>hashicorp/</p></div>
+                    <div class="project"><p>packer</p></div>
                     <div class="stars" data-github-project="hashicorp/packer"></div>
-                    <div class="lang go">Go</div>
+                    <div class="lang go"><p>Go</p></div>
                     <div class="expand"><i data-feather="more-horizontal"></i></div>
                     <div class="desc">Packer is a tool for creating identical machine images for multiple platforms from
                         a single source configuration</div>
@@ -142,10 +142,10 @@
             </div>
             <div>
                 <a href="https://github.com/Dynatrace/serverless-oneagent">
-                    <div class="org">dynatrace/</div>
-                    <div class="project">serverless-oneagent</div>
+                    <div class="org"><p>dynatrace/</p></div>
+                    <div class="project"><p>serverless-oneagent</p></div>
                     <div class="stars" data-github-project="Dynatrace/serverless-oneagent"></div>
-                    <div class="lang ts">TypeScript</div>
+                    <div class="lang ts"><p>TypeScript</p></div>
                     <div class="expand"><i data-feather="more-horizontal"></i></div>
                     <div class="desc">Serverless Framework plugin to include Dynatrace OneAgent in serverless
                         deployments</div>
@@ -153,90 +153,90 @@
             </div>
             <div>
                 <a href="https://github.com/gogs/gogs">
-                    <div class="org">gogs/</div>
-                    <div class="project">gogs</div>
+                    <div class="org"><p>gogs/</p></div>
+                    <div class="project"><p>gogs</p></div>
                     <div class="stars" data-github-project="gogs/gogs"></div>
-                    <div class="lang go">Go</div>
+                    <div class="lang go"><p>Go</p></div>
                     <div class="expand"><i data-feather="more-horizontal"></i></div>
                     <div class="desc">Gogs is a painless self-hosted Git service</div>
                 </a>
             </div>
             <div>
                 <a href="https://git.sr.ht/~tcarrio/dialogflow-as-code">
-                    <div class="org">~tcarrio/</div>
-                    <div class="project">dialogflow-as-code</div>
+                    <div class="org"><p>~tcarrio/</p></div>
+                    <div class="project"><p>dialogflow-as-code</p></div>
                     <div class="stars" data-srht-project="~tcarrio/dialogflow-as-code"></div>
-                    <div class="lang ts">TypeScript</div>
+                    <div class="lang ts"><p>TypeScript</p></div>
                     <div class="expand"><i data-feather="more-horizontal"></i></div>
                     <div class="desc">Declarative management of Dialogflow resources in Google Cloud</div>
                 </a>
             </div>
             <div>
                 <a href="https://github.com/github/hub">
-                    <div class="org">github/</div>
-                    <div class="project">hub</div>
+                    <div class="org"><p>github/</p></div>
+                    <div class="project"><p>hub</p></div>
                     <div class="stars" data-github-project="github/hub"></div>
-                    <div class="lang go">Go</div>
+                    <div class="lang go"><p>Go</p></div>
                     <div class="expand"><i data-feather="more-horizontal"></i></div>
                     <div class="desc">A command-line tool that makes git easier to use with GitHub</div>
                 </a>
             </div>
             <div>
                 <a href="https://www.npmjs.com/package/@dynatrace/api-client">
-                    <div class="org">@dynatrace/</div>
-                    <div class="project">api-client</div>
+                    <div class="org"><p>@dynatrace/</p></div>
+                    <div class="project"><p>api-client</p></div>
                     <div class="stars" data-npm-project="@dynatrace/api-client"></div>
-                    <div class="lang ts">TypeScript</div>
+                    <div class="lang ts"><p>TypeScript</p></div>
                     <div class="expand"><i data-feather="more-horizontal"></i></div>
                     <div class="desc">Module for interacting with the Dynatrace API including caching support</div>
                 </a>
             </div>
             <div>
                 <a href="https://github.com/go-gitea/gitea">
-                    <div class="org">go-gitea/</div>
-                    <div class="project">gitea</div>
+                    <div class="org"><p>go-gitea/</p></div>
+                    <div class="project"><p>gitea</p></div>
                     <div class="stars" data-github-project="go-gitea/gitea"></div>
-                    <div class="lang go">Go</div>
+                    <div class="lang go"><p>Go</p></div>
                     <div class="expand"><i data-feather="more-horizontal"></i></div>
                     <div class="desc">Git with a cup of tea, painless self-hosted git service</div>
                 </a>
             </div>
             <div>
                 <a href="https://github.com/DefinitelyTyped/DefinitelyTyped">
-                    <div class="org">DefinitelyTyped/</div>
-                    <div class="project">DefinitelyTyped</div>
+                    <div class="org"><p>DefinitelyTyped/</p></div>
+                    <div class="project"><p>DefinitelyTyped</p></div>
                     <div class="stars" data-github-project="DefinitelyTyped/DefinitelyTyped"></div>
-                    <div class="lang ts">TypeScript</div>
+                    <div class="lang ts"><p>TypeScript</p></div>
                     <div class="expand"><i data-feather="more-horizontal"></i></div>
                     <div class="desc">The repository for high quality TypeScript type definitions</div>
                 </a>
             </div>
             <div>
                 <a href="https://github.com/lutris/lutris">
-                    <div class="org">lutris/</div>
-                    <div class="project">lutris</div>
+                    <div class="org"><p>lutris/</p></div>
+                    <div class="project"><p>lutris</p></div>
                     <div class="stars" data-github-project="lutris/lutris"></div>
-                    <div class="lang py">Python</div>
+                    <div class="lang py"><p>Python</p></div>
                     <div class="expand"><i data-feather="more-horizontal"></i></div>
                     <div class="desc">Open Source gaming platform for GNU/Linux</div>
                 </a>
             </div>
             <div>
                 <a href="https://hub.docker.com/r/tcarrio/dynamodb-local-debugging">
-                    <div class="org">tcarrio/</div>
-                    <div class="project">dynamodb-local-debugging</div>
+                    <div class="org"><p>tcarrio/</p></div>
+                    <div class="project"><p>dynamodb-local-debugging</p></div>
                     <div class="stars" data-docker-project="tcarrio/dynamodb-local-debugging"></div>
-                    <div class="lang dk">Docker</div>
+                    <div class="lang dk"><p>Docker</p></div>
                     <div class="expand"><i data-feather="more-horizontal"></i></div>
                     <div class="desc">DynamoDB Local container ready for development with debug logging</div>
                 </a>
             </div>
             <div>
                 <a href="https://github.com/roddhjav/pass-import">
-                    <div class="org">roddhjav/</div>
-                    <div class="project">pass-import</div>
+                    <div class="org"><p>roddhjav/</p></div>
+                    <div class="project"><p>pass-import</p></div>
                     <div class="stars" data-github-project="roddhjav/pass-import"></div>
-                    <div class="lang py">Python</div>
+                    <div class="lang py"><p>Python</p></div>
                     <div class="expand"><i data-feather="more-horizontal"></i></div>
                     <div class="desc">A pass extension for importing data from most of the existing password manager
                     </div>
@@ -244,10 +244,10 @@
             </div>
             <div>
                 <a href="https://github.com/tcarrio/dddd">
-                    <div class="org">tcarrio/</div>
-                    <div class="project">dddd</div>
+                    <div class="org"><p>tcarrio/</p></div>
+                    <div class="project"><p>dddd</p></div>
                     <div class="stars" data-github-project="tcarrio/dddd"></div>
-                    <div class="lang go">Go</div>
+                    <div class="lang go"><p>Go</p></div>
                     <div class="expand"><i data-feather="more-horizontal"></i></div>
                     <div class="desc">Dynamic DNS for Cloudflare using DuckDuckGo's Answers API</div>
                 </a>
@@ -257,30 +257,91 @@
         <section id="technologies">
             <div class="title">Technologies and Experience</div>
             <div>
-                <p class="topic">Container and Infrastructural Technologies </p>
-                <p class="entries">OpenShift, Docker, ECS, Compose, Kubernetes, Etcd, Terraform, Packer</p>
+                <p class="topic">Containers and Orchestration </p>
+                <p class="entries">OpenShift, Docker, ECS, Compose, Kubernetes</p>
             </div>
             <div>
                 <p class="topic">Programming Languages</p>
                 <p class="entries">TypeScript, Java, Groovy, Go, Python</p>
             </div>
             <div>
-                <p class="topic">Databases and Messaging</p>
-                <p class="entries">PostgreSQL, Oracle DB, MySQL, MongoDB, Redis, IBM MQ, Kafka, SQS</p>
+                <p class="topic">Databases</p>
+                <p class="entries">PostgreSQL, Oracle DB, MySQL, MongoDB</p>
             </div>
             <div>
-                <p class="topic">Web Development Technologies</p>
-                <p class="entries">Node.js, Angular, NestJS, Nginx, Spring, GraphQL, REST, SOAP</p>
+                <p class="topic">Web Development</p>
+                <p class="entries">Angular, NestJS, GraphQL</p>
             </div>
             <div>
-                <p class="topic">Software Development Lifecycle and Tooling</p>
-                <p class="entries">Scrum, Agile, Bitbucket, Dynatrace, Git, SVN, Jenkins, Jest, Mockito, JUnit, Mocha
-                </p>
+                <p class="topic">Service Service</p>
+                <p class="entries">Node.js, Spring, REST, SOAP</p>
+            </div>
+            <div>
+                <p class="topic">Infrastructure and Networking</p>
+                <p class="entries">Nginx, Etcd, Terraform, Packer, Packer, Ansible</p>
+            </div>
+            <div>
+                <p class="topic">Message Queues, PubSub, and Stream Processing</p>
+                <p class="entries">IBM MQ, SQS, Redis, Kafka</p>
+            </div>
+            <div>
+                <p class="topic">Software Development Lifecycle and Source Control</p>
+                <p class="entries">Scrum, Agile, Bitbucket, Git, GitHub, SVN</p>
+            </div>
+            <div>
+                <p class="topic">Unit Testing</p>
+                <p class="entries">Jest, Mockito, JUnit, Mocha</p>
+            </div>
+            <div>
+                <p class="topic">Continuous Integration, Delivery, and Shifting Left</p>
+                <p class="entries">Jenkins, Docker, Blackduck, Drone, GitHub Actions</p>
+            </div>
+            <div>
+                <p class="topic">Observability and Monitoring</p>
+                <p class="entries">Dynatrace, OpenTelemetry, Prometheus, Zipkin</p>
+            </div>
+            <div>
+                <p class="topic">Logging</p>
+                <p class="entries">Splunk, Dynatrace, CloudWatch</p>
+            </div>
+            <div>
+                <p class="topic">Serverless</p>
+                <p class="entries">Lambda, Serverless</p>
+            </div>
+            <div>
+                <p class="topic">Data Processing</p>
+                <p class="entries">IBM DataStage, Python, Hadoop</p>
             </div>
         </section>
-
-        <!-- <section id="experience"></section> -->
     </div>
+
+    <footer>
+        <div class="footer-container">
+            <div class="footer-row">
+                <img src="assets/images/sourcehut-icon.png">
+                <div class="row-message">
+                    <p>:: This page is built on <a href="https://sourcehut.org">SourceHut</a> using the <a
+                            href="https://builds.sr.ht">build.sr.ht</a> pipeline system.</p>
+                </div>
+            </div>
+
+            <div class="footer-row">
+                <img src="assets/images/netlify-icon.png">
+                <div class="row-message">
+                    <p>:: This page is hosted on <a href="https://netlify.com">Netlify</a> with deployments using their
+                        <a href="https://github.com/netlify/cli">cli</a>.</p>
+                </div>
+            </div>
+
+            <div class="footer-row">
+                <img src="assets/images/sourcehut-icon.png">
+                <div class="row-message">
+                    <p>:: This website is open source and hosted on <a href="https://sourcehut.org">SourceHut</a> at
+                        <a href="https://tom.carrio.dev">~tcarrio/tom.carrio.dev</a>.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!-- Replace all icons -->
     <script>
