Fixed Sourcehut capitalization and updated entries

--- a/index.html
+++ b/index.html
@@ -265,16 +265,16 @@
                 <p class="entries">TypeScript, Java, Groovy, Go, Python</p>
             </div>
             <div>
+                <p class="topic">Web Development</p>
+                <p class="entries">Angular, Sass, Webpack, CSS3, HTML5</p>
+            </div>
+            <div>
+                <p class="topic">Service Development</p>
+                <p class="entries">Node.js, NestJS, Spring, REST, GraphQL</p>
+            </div>
+            <div>
                 <p class="topic">Databases</p>
                 <p class="entries">PostgreSQL, Oracle DB, MySQL, MongoDB</p>
-            </div>
-            <div>
-                <p class="topic">Web Development</p>
-                <p class="entries">Angular, NestJS, GraphQL</p>
-            </div>
-            <div>
-                <p class="topic">Service Service</p>
-                <p class="entries">Node.js, Spring, REST, SOAP</p>
             </div>
             <div>
                 <p class="topic">Infrastructure and Networking</p>
@@ -293,6 +293,10 @@
                 <p class="entries">Jest, Mockito, JUnit, Mocha</p>
             </div>
             <div>
+                <p class="topic">Integration Testing</p>
+                <p class="entries">Selenium, Cypress, Gherkin</p>
+            </div>
+            <div>
                 <p class="topic">Continuous Integration, Delivery, and Shifting Left</p>
                 <p class="entries">Jenkins, Docker, Blackduck, Drone, GitHub Actions</p>
             </div>
@@ -302,7 +306,7 @@
             </div>
             <div>
                 <p class="topic">Logging</p>
-                <p class="entries">Splunk, Dynatrace, CloudWatch</p>
+                <p class="entries">Splunk, Log4j, Pino, CloudWatch</p>
             </div>
             <div>
                 <p class="topic">Serverless</p>
@@ -320,7 +324,7 @@
             <div class="footer-row">
                 <img src="assets/images/sourcehut-icon.png">
                 <div class="row-message">
-                    <p>:: This page is built on <a href="https://sourcehut.org">SourceHut</a> using the <a
+                    <p>:: This page is built on <a href="https://sourcehut.org">Sourcehut</a> using the <a
                             href="https://builds.sr.ht">build.sr.ht</a> pipeline system.</p>
                 </div>
             </div>
@@ -336,7 +340,7 @@
             <div class="footer-row">
                 <img src="assets/images/sourcehut-icon.png">
                 <div class="row-message">
-                    <p>:: This website is open source and hosted on <a href="https://sourcehut.org">SourceHut</a> at
+                    <p>:: This website is open source and hosted on <a href="https://sourcehut.org">Sourcehut</a> at
                         <a href="https://tom.carrio.dev">~tcarrio/tom.carrio.dev</a>.</p>
                 </div>
             </div>
