Trading out lesser skilled entry GitHub Actions for SonarQube in CI

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             </div>
             <div>
                 <p class="topic">Continuous Integration, Delivery, and Shifting Left</p>
-                <p class="entries">Jenkins, Docker, Blackduck, Drone, GitHub Actions</p>
+                <p class="entries">Jenkins, Docker, Blackduck, Drone, SonarQube</p>
             </div>
             <div>
                 <p class="topic">Observability and Monitoring</p>
