Including 'Accessibility' and 'Security'

--- a/index.html
+++ b/index.html
@@ -297,8 +297,8 @@
                 <p class="entries">Selenium, Cypress, Gherkin</p>
             </div>
             <div>
-                <p class="topic">Continuous Integration, Delivery, and Shifting Left</p>
-                <p class="entries">Jenkins, Docker, Blackduck, Drone, SonarQube</p>
+                <p class="topic">Continuous Integration, Delivery, Accessibility, and Security</p>
+                <p class="entries">Jenkins, Blackduck, Drone, SonarQube, Lighthouse</p>
             </div>
             <div>
                 <p class="topic">Observability and Monitoring</p>
