--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div>
             <div id="user-icon">
-                <img src="assets/images/avatar.jpg">
+                <img src="assets/images/avatar.png">
             </div>
             <div id="hello">
                 <span class="me">I am Tom Carrio,</span>
